corrected overflow problem with input boxs

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,10 +31,11 @@ body{
     transition: 1s all;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
      rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+     min-height: 450px;
 }
 .card{
     width: 40%;
-    height: inherit;
+    height: 100%;
 }
 .card img{
     height: 100%;
@@ -43,7 +44,7 @@ body{
 }
 .form-input{
     width: 60%;
-    padding: 1rem;
+    padding: 0rem 1rem;
 }
 .form-input h1{
     margin-top: 10px;
@@ -98,7 +99,7 @@ body{
     height: 2.5rem;
     width: 90%;
     display: inline;
-    margin: 10px 20px;
+    margin: 5px 20px;
     border-radius: 1rem;
     border: none;
     background-color: red;
